Add event listener for submit button and enter key press, update when submitted

--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
             <div class="input-div">
                 <label for="city">City: </label>
                 <input type="text" id="city">
+                <input type="submit" id="submitButton" value="Submit">
             </div>
-            <div class="weather-forecast"> 
-                <div class="temp-f"></div>
-                <div class="temp-c"></div>
-                <div class="feels-like-c"></div>
+            <div class="weather-forecast">
+                <img src="" alt="weather-icon" class="weather-icon">
+                <h2 id="cur-city"></h2>
+                <div class="temp"></div>
+                <div class="feels-like"></div>
             </div>
         </div>
     </div>
