Add weather status text

--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
                 <input type="text" id="city">
                 <input type="submit" id="submitButton" value="Submit">
             </div>
-            <div class="weather-forecast">
-                <img src="" alt="weather-icon" class="weather-icon">
+            <div class="weather-div">
                 <h2 id="cur-city"></h2>
+                <div class="condition"></div>
+                <img src="" alt="weather-icon" class="weather-icon">
                 <div class="temp"></div>
                 <div class="feels-like"></div>
             </div>
