--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
                 <input type="submit" id="submitButton" value="Submit">
             </div>
             <div class="weather-div">
-                <h2 id="cur-city"></h2>
+                
                 <div class="condition"></div>
                 <img src="" alt="weather-icon" class="weather-icon">
+                <h2 id="cur-city"></h2>
                 <div class="temp"></div>
                 <div class="feels-like"></div>
+                <div class="time"></div>
             </div>
         </div>
     </div>
